--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,23 @@
+/* styles.css */
+
 /* layout styles listed in order of occurrence */
-body {
+/* body {
 	display: grid;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	grid-auto-rows: auto;
 	grid-template-areas: "sidebar header header header"
       "sidebar main main main"
       "sidebar main main main";
+} */
+
+body {
+	display: grid;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 1em;
+	grid-template-areas: "header header header header"
+	"main main main main"
+	"sidebar sidebar sidebar sidebar";
+	grid-template-rows: auto;
 }
 
 .l-header-main {
@@ -76,9 +88,15 @@ h1 {
 	color: #340933;
 }
 
-h2 {
+/* h2 {
 	color: #9A0794;
 	margin-left: 5%;
+} */
+
+h2 {
+	margin-left: 1%;
+	padding-left: 1%;
+	width: 40%;
 }
 
 h3 {
@@ -135,12 +153,19 @@ img {
 	margin-left: 3%;
 }
 
-.fa-bowling-ball {
+/* .fa-bowling-ball {
 	color: #340933;
 	justify-self: flex-end;
 	padding-right: 2%;
 	padding-top: 2.5%;
 	width: 1%;
+} */
+
+.fa-bowling-ball {
+	color: #340933;
+	justify-self: flex-end;
+	padding-right: 2%;
+	padding-top: 3%;
 }
 
 .dates {
@@ -168,6 +193,7 @@ img {
 
 .contact-header {
 	align-content: flex-start;
+	/* align-content: center; */
 	background-color: #0d0d0d;
 	display: flex;
 	flex-direction: row;
@@ -229,18 +255,37 @@ img {
 	color: #c10000;
 }
 /* End of state styles */
+
+@media (min-width: 768px) {
+	body {
+		display: grid;
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		grid-auto-rows: auto;
+		grid-template-areas: "sidebar header header header"
+		  "sidebar main main main"
+		  "sidebar main main main";
+	}
+	
+	.fa-bowling-ball {
+		color: #340933;
+		justify-self: flex-end;
+		padding-right: 2%;
+		padding-top: 2.5%;
+		width: 1%;
+	}	
+}
   
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   /* Base listed in order of occurrence */
-	h2 {
+	/* h2 {
 		margin-left: 1%;
 		padding-left: 1%;
 		width: 40%;
-	}
+	} */
   /* End of Base styles */
 
   /* Layout styles listed in order of occurrence */
-	body {
+	/* body {
 		display: grid;
 		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 		font-size: 1em;
@@ -248,26 +293,26 @@ img {
     "main main main main"
     "sidebar sidebar sidebar sidebar";
 		grid-template-rows: auto;
-	}
+	} */
   /* End of Layout styles */
   
   /* Modules styles */
-	.fa-bowling-ball {
+	/* .fa-bowling-ball {
 		color: #340933;
 		justify-self: flex-end;
 		padding-right: 2%;
 		padding-top: 3%;
-	}
-}
+	} */
+} */
 
-@media (min-width:320px) and (max-width: 414px) {
+/* @media (min-width:320px) and (max-width: 414px) {
   /* Module style */
-	.fa-bowling-ball {
+	/* .fa-bowling-ball {
 		color: #340933;
 		justify-self: flex-end;
 		padding-right: 2%;
 		padding-top: 5%;
-	}
-}  
+	} */
+}   */
 
 
