--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .l-header-main {
-	background-color: #ffffff;
+	background-color: #000000;
 	color: #091034;
 	display: flex;
 	flex-direction: column;
@@ -125,8 +125,12 @@ hr {
 	width: 90%;
 }
 
+.contact-details {
+	color: #fff;
+}
+
 a {
-	color: #0d0d0d;
+	color: #ffffaa;
 }
 
 
@@ -139,6 +143,10 @@ a {
 	color: #9A0794;
 	font-weight: 900;
 	margin-right: 1%;
+}
+
+.surname {
+	color: #5A18C9;
 }
 
 .freelance {
@@ -232,6 +240,7 @@ a {
 		width: 100%;
 	}
 	.l-header-main {
+		background-color: #ffffff;
 		display: grid;
 		grid-auto-rows: auto;
 		grid-column: 4/12;
